--- a/Angel/Info.plist
+++ b/Angel/Info.plist
@@ -7,5 +7,9 @@
 		<string>White Scratches.ttf</string>
 		<string>Alvifont.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 </dict>
 </plist>
